--- a/apps/mobile/ios/aigo/Info.plist
+++ b/apps/mobile/ios/aigo/Info.plist
@@ -88,18 +88,25 @@
 		<string>DMSans-Regular.ttf</string>
 		<string>DMSans-SemiBold.ttf</string>
 		<string>DMSans-Thin.ttf</string>
-		<string>Gabarito-Black.ttf</string>
-		<string>Gabarito-Bold.ttf</string>
-		<string>Gabarito-ExtraBold.ttf</string>
-		<string>Gabarito-Medium.ttf</string>
-		<string>Gabarito-Regular.ttf</string>
-		<string>Gabarito-SemiBold.ttf</string>
-		<string>Lato-Bold.ttf</string>
-		<string>Lato-Light.ttf</string>
-		<string>Lato-Regular.ttf</string>
-		<string>Lato-Thin.ttf</string>
 		<string>ClashDisplay-Variable.ttf</string>
 		<string>Poppins-SemiBold.ttf</string>
+		<string>ClashDisplay.ttf</string>
+		<string>Lato-Bold.ttf</string>
+		<string>Lato-BoldItalic.ttf</string>
+		<string>Lato-ExtraBold.ttf</string>
+		<string>Lato-ExtraBoldItalic.ttf</string>
+		<string>Lato-ExtraLight.ttf</string>
+		<string>Lato-ExtraLightItalic.ttf</string>
+		<string>Lato-Italic.ttf</string>
+		<string>Lato-Light.ttf</string>
+		<string>Lato-LightItalic.ttf</string>
+		<string>Lato-Medium.ttf</string>
+		<string>Lato-MediumItalic.ttf</string>
+		<string>Lato-Regular.ttf</string>
+		<string>Lato-SemiBold.ttf</string>
+		<string>Lato-SemiBoldItalic.ttf</string>
+		<string>Lato-Thin.ttf</string>
+		<string>Lato-ThinItalic.ttf</string>
 	</array>
 	<key>UIBackgroundModes</key>
 	<array>
