--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -17,6 +17,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@aigo/api": "*",
+    "@aigo/components": "*",
+    "@aigo/config": "*",
+    "@aigo/crypto": "*",
     "@invertase/react-native-apple-authentication": "^2.3.0",
     "@mapbox/mapbox-sdk": "^0.16.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
@@ -50,6 +54,7 @@
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-localize": "^3.1.0",
     "react-native-permissions": "^4.1.5",
+    "react-native-quick-crypto": "^0.7.4",
     "react-native-reanimated": "3.11.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
