--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "lodash": "^4.17.21",
-    "next": "14.2.4",
+    "next": "^14.2.15",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^6.1.11"
