--- a/apps/quest/package.json
+++ b/apps/quest/package.json
@@ -16,7 +16,7 @@
     "date-fns": "^3.6.0",
     "empty-modal": "^0.0.10",
     "firebase": "^10.12.2",
-    "next": "14.2.4",
+    "next": "^14.2.15",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
