--- a/apps/quest/package.json
+++ b/apps/quest/package.json
@@ -31,10 +31,16 @@
     "valtio": "^1.13.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.25.8",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.25.7",
+    "@babel/plugin-transform-flow-strip-types": "^7.25.7",
+    "@babel/preset-env": "^7.25.8",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.6",
     "@types/react-native": "^0.73.0",
     "aws-cdk-lib": "2.142.1",
+    "babel-loader": "^9.2.1",
     "constructs": "10.3.0",
     "dotenv": "^16.4.5",
     "sst": "^2.43.2",
