--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -11,6 +11,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "gsap": "^3.12.5",
     "lodash": "^4.17.21",
     "next": "^14.2.15",
     "react": "18.2.0",
